--- a/src/app/components/pages/services/services.component.html
+++ b/src/app/components/pages/services/services.component.html
@@ -1,18 +1,6 @@
-  <!-- ===================================
-              START THE HEADER
-            ==================================== -->
-            
-            <!-- ===================================
-              START THE SPACE STICKY
-            ==================================== -->
+
             <div class="space-sticky"></div>
-            <!-- ===================================
-              START THE NFT SWIPER
-            ==================================== -->
-  
-            <!-- ===================================
-              START THE BEST SELLER
-            ==================================== -->
+       
             <section class="margin-t-20 unList-bestSeller">
                 <!-- un-title-default -->
                 <div class="un-title-default">
@@ -30,7 +18,6 @@
                     </div>
                 </div>
 
-   <!--  -->
 
 
                 <div class="content-list-sellers">
@@ -38,23 +25,22 @@
                         <li class="nav-item" *ngFor="let service of services$ | async" >
                             <div class="nav-link item-user-seller">
                                 <a class="item-user-img"  >
-                                 <!--    <picture>
-                                        <source srcset="assets/assetsryal/images/avatar/22.webp" type="{{service.images[0]}}">
-                                        <img class="avt-img" src="{{service.images[0]}}" alt="">
-                                    </picture> -->
+                            
                                     <div class="txt-user">
                                         <h5> 
-                                        	<!-- <span>{{service.categoria}} </span> -->
                                         </h5>
                                         <p>{{service.name}}
-                                         <!-- <i class="ri-checkbox-circle-fill"></i>  -->
+<i class="ri-coins-fill text-ligth" style="font-size: 1.3rem; margin-right: 10%; font-weight: initial;"> </i>
+                                     {{service.basePrice}}
+                            
                                      </p>
+
                                     </div>
                                 </a>
-                                <div class="other-option" style="margin-right:2%; cursor: pointer;" data-bs-toggle="modal" data-bs-target="#mdllUploadItem">
+                                  <div class="other-option" style="margin-right:2%; cursor: pointer;" data-bs-toggle="modal" data-bs-target="#mdllUploadItem">
                                     <div class="color-text rounded-pill bg-snow btn-xs-size " >
-     <i class="ri-coins-fill text-ligth" style="font-size: 1.3rem; margin-right: 10%; font-weight: initial;"> </i>
-                                     {{service.basePrice}}</div>
+     <i class="ri-delete-bin-fill text-danger" style="font-size: 1.3rem; margin-right: 10%; font-weight: initial;"> </i>
+                                     Borrar</div>
                                 </div>
                             </div>
                         </li>
