--- a/src/app/components/pages/login/login.component.html
+++ b/src/app/components/pages/login/login.component.html
@@ -1,19 +1,17 @@
    <form [formGroup]="authForm" (ngSubmit)="onSubmit()">
 
            <div class="space-sticky"></div>
-            <!-- ===================================
-              START THE FORM
-            ==================================== -->
+         
             <section class="account-section padding-20">
                   <div class="img-coin-eth" [hidden]="_butler.deviceType=='Escritorio'">
                         <picture>
-                            <!-- <source srcset="assets/assetsryal/images/logo_07.webp" type="image/webp"> -->
+                     
                             <img src="assets/assetsryal/images/logo_07.png" alt="" style="max-width: 100%;padding: 10%;align-content: center;">
                         </picture>
                     </div>
                   <div class="img-coin-eth" [hidden]="_butler.deviceType!='Escritorio'">
                         <picture>
-                            <!-- <source srcset="assets/assetsryal/images/logo_07.webp" type="image/webp"> -->
+                        
                             <img src="assets/assetsryal/images/logo_07c.png" alt="" style="max-width: 100%;padding-bottom: 3%;">
                         </picture>
                     </div>
@@ -21,51 +19,8 @@
                     <h1>Inicio de session!</h1>
                     <p>Ingrese su correo y su contrasena para continuar</p>
                 </div>
-             <!--    <div class="connect-with-apps">
-                    <a href="page-signin.html#" class="apple">
-                        <i class="ri-apple-fill"></i>
-                    </a>
-                    <a href="page-signin.html#" class="google">
-                        <img src="images/icons/google.svg" alt="google">
-                    </a>
-                    <a href="page-signin.html#" class="facebook">
-                        <i class="ri-facebook-circle-fill"></i>
-                    </a>
-                </div> -->
-  <!--               <div class="dividar_or">
-                    <span>or</span>
-                </div> -->
+  
                 <div class="content__form margin-t-24">
-       <!--              <form>
-                        <div class="form-group icon-left">
-                            <label>Email </label>
-                            <div class="input_group">
-                                <input type="email" class="form-control" placeholder='e. g. "example@mail.com"'
-                                    required>
-                                <div class="icon">
-                                    <i class="ri-mail-open-line"></i>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="form-group icon-left">
-                            <label>Password</label>
-                            <div class="input_group">
-                                <input type="password" class="form-control" placeholder='e. g. "John$99*04"' required>
-                            
-                                <div class="icon">
-                                    <i class="ri-lock-password-line"></i>
-                                </div>
-                            </div>
-                        </div>
-                    </form> -->
-
-
-                  
-                       <!--  <div class="mb-3">
-                          <label for="exampleInputEmail1" class="form-label">Email</label>
-                          <input formControlName="email" type="email" class="form-control" id="exampleInputEmail1"
-                            aria-describedby="emailHelp">
-                        </div> -->
 
                         <div class="form-group icon-left">
                             <label>Email </label>
@@ -88,38 +43,16 @@
                                 </div>
                             </div>
                         </div>
-
-
-
-
-                     <!--    <div class="mb-3">
-                          <label for="exampleInputPassword1" class="form-label">Password</label>
-                          <input formControlName="password" type="password" class="form-control" id="exampleInputPassword1">
-                        </div> -->
-
-               <!--          <div class="d-grid">
-                          <button type="submit" class="btn btn-info">Entrar</button>
-                        </div> -->
-                      
-                 
-
-
                 </div>
             </section>
-            <!-- ===================================
-              START ACCOUT FOOTER
-            ==================================== -->
+   
             <footer class="footer-account">
                 <div class="env-pb">
                     <div class="display-actions">
-                           <button type="submit"  class="btn btn-sm-arrow bg-primary" style="color:white;">Entrar</button>
-                      <!--   <a type="submit" class="btn btn-sm-arrow bg-primary">
-                            <p>Entrar</p>
-                            <div class="ico">
-                                <i class="ri-arrow-drop-right-line"></i>
-                            </div>
+                           <button type="submit"  class="btn btn-sm-arrow bg-primary" style="color:white;">Entrar<div class="ico">
+                                                <i class="ri-arrow-drop-right-line"></i>
+                                            </div></button>
 
-                        </a> -->
  <div class="ico">
                                 <i class="ri-arrow-drop-right-line"></i>
                             </div>
