--- a/src/app/components/pages/login/login.component.html
+++ b/src/app/components/pages/login/login.component.html
@@ -49,13 +49,12 @@
             <footer class="footer-account">
                 <div class="env-pb">
                     <div class="display-actions">
-                           <button type="submit"  class="btn btn-sm-arrow bg-primary" style="color:white;">Entrar<div class="ico">
-                                                <i class="ri-arrow-drop-right-line"></i>
-                                            </div></button>
-
- <div class="ico">
+                           <button type="submit"  class="btn btn-sm-arrow bg-primary" style="color:white;">Entrar
+                                <div class="ico">
                                 <i class="ri-arrow-drop-right-line"></i>
-                            </div>
+                                </div>
+                            </button>
+
                     </div>
                     <div class="dividar"></div>
                     <div class="support">
