--- a/src/app/components/pages/specialties/specialties.component.html
+++ b/src/app/components/pages/specialties/specialties.component.html
@@ -35,7 +35,7 @@
 
                 <div class="content-list-sellers">
                     <ul class="nav flex-column">
-                        <li class="nav-item" *ngFor="let specialty of specialties$ | async" >
+                        <li class="nav-item" *ngFor="let specialty of specialties$ | async" [hidden]="specialty.status!='active'">
                             <div class="nav-link item-user-seller">
                                 <a class="item-user-img"  >
                                  <!--    <picture>
@@ -51,7 +51,7 @@
                                      </p>
                                     </div>
                                 </a>
-                                <div class="other-option" style="margin-right:2%; cursor: pointer;" data-bs-toggle="modal" data-bs-target="#mdllUploadItem">
+                                <div class="other-option" style="margin-right:2%; cursor: pointer;" data-bs-toggle="modal" data-bs-target="#mdllUploadItem" (click)="delete(specialty)">
                                     <div class="color-text rounded-pill bg-snow btn-xs-size " >
      <i class="ri-delete-bin-fill text-danger" style="font-size: 1.3rem; margin-right: 10%; font-weight: initial;"> </i>
                                      Borrar</div>
