--- a/src/app/components/pages/member/member.component.html
+++ b/src/app/components/pages/member/member.component.html
@@ -25,7 +25,7 @@
                         <button type="button" class="btn btn-copy-address mt-3">
                             <input type="checkbox">
                             <div class="icon-box">
-                                <i class="ri-file-copy-2-line"></i>
+                                <i class="ri-delete-bin-fill text-danger"></i>
                             </div>
                         </button>
                     </div>
