--- a/src/app/components/pages/shop/shop.component.html
+++ b/src/app/components/pages/shop/shop.component.html
@@ -21,7 +21,7 @@
                         <p>Seleccione un estilista para ver el detalle o asigne un trabajo</p>
                     </div>
                     <div class="un-block-right">
-                        <a class="icon-back" aria-label="iconBtn" [hidden]="!_butler.list || _butler.deviceType!='Escritorio'" (click)="viewChange('grid') " >
+                        <a class="icon-back" aria-label="iconBtn" [hidden]="!_butler.list || _butler.deviceType!='Escritorio'" (click)="viewChange('grid') ">
                             <i class="ri-layout-grid-fill" style="font-size:1rem;" ></i>
                         </a>
                         <a class="icon-back" aria-label="iconBtn" [hidden]="!_butler.grid" (click)="viewChange('list')">
@@ -33,7 +33,7 @@
                 <div class="discover-nft-random margin-t-20" [hidden]="!_butler.grid">
                     <div class="content-NFTs-body">
                         
-                        <a  class="item-sm-card-NFTs "  *ngFor="let member of members$ | async">
+                        <a  class="item-sm-card-NFTs "  *ngFor="let member of members$ | async"  style="cursor: pointer;" >
                             <div class="cover-image">
                                 <picture  (click)="setPreview(member)">
                                     <source srcset="{{member.images[0]}}" type="image/webp">
@@ -76,7 +76,7 @@
                     <ul class="nav flex-column">
                         <li class="nav-item" *ngFor="let member of members$ | async" >
                             <div class="nav-link item-user-seller">
-                                <a class="item-user-img"  (click)="setPreview(member)">
+                                <a class="item-user-img"  (click)="setPreview(member)"  style="cursor: pointer;" >
                                     <picture>
                                         <source srcset="assets/assetsryal/images/avatar/22.webp" type="{{member.images[0]}}">
                                         <img class="avt-img" src="{{member.images[0]}}" alt="">
