notificaion icon remove

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -120,7 +120,7 @@
                                           </button>
                                           <button [hidden]="!sendStylistFlag" type="submit"  class="btn btn-md-arrow bg-primary w-100" style="color:white;" data-bs-dismiss="modal" style="margin-top:10%;color:white; font-weight:900; justify-content: center;">Aceptar
                                             <div class="ico">
-                                                <i class="ri-arrow-drop-right-line"></i>
+                                              <i class="ri-check-line"></i>
                                             </div>
                                           </button>
                                     </div>
@@ -152,7 +152,7 @@
                                         <button type="submit"  class="btn btn-md-arrow bg-primary w-100" style="color:white;" data-bs-dismiss="modal" style="margin-top:10%;color:white; font-weight:900; justify-content: center;">Aceptar
 
                                             <div class="ico">
-                                                <i class="ri-arrow-drop-right-line"></i>
+                                                <i class="ri-check-line"></i>
                                             </div>
                                         </button>
                                     </div>
@@ -199,7 +199,7 @@
                                         <button type="submit"  class="btn btn-md-arrow bg-primary w-100" style="color:white;" data-bs-dismiss="modal" style="margin-top:10%;color:white; font-weight:900; justify-content: center;">Aceptar
 
                                             <div class="ico">
-                                                <i class="ri-arrow-drop-right-line"></i>
+                                               <i class="ri-check-line"></i>
                                             </div>
                                         </button>
                                     </div>
@@ -225,7 +225,7 @@
                                         <button type="submit" (click)="deleteSpecialty()" class="btn btn-md-arrow bg-danger w-100" style="color:white;" data-bs-dismiss="modal" style="margin-top:10%;color:white; font-weight:900; justify-content: center;">Borrar
 
                                             <div class="ico">
-                                                <i class="ri-arrow-drop-right-line"></i>
+                                                <i class="ri-delete-bin-line"></i>
                                             </div>
                                         </button>
                                     </div>
@@ -246,7 +246,7 @@
                                         </p>
                                         <button type="submit" (click)="deleteService()" class="btn btn-md-arrow bg-danger w-100" style="color:white;" data-bs-dismiss="modal" style="margin-top:10%;color:white; font-weight:900; justify-content: center;">Borrar
                                             <div class="ico">
-                                                <i class="ri-arrow-drop-right-line"></i>
+                                                <i class="ri-delete-bin-line"></i>
                                             </div>
                                         </button>
                                     </div>
@@ -267,7 +267,7 @@
                                         </p>
                                         <button type="submit" (click)="deleteStylist()" class="btn btn-md-arrow bg-danger w-100" style="color:white;" data-bs-dismiss="modal" style="margin-top:10%;color:white; font-weight:900; justify-content: center;">Borrar
                                             <div class="ico">
-                                                <i class="ri-arrow-drop-right-line"></i>
+                                                <i class="ri-delete-bin-line"></i>
                                             </div>
                                         </button>
                                     </div>
@@ -455,7 +455,6 @@
                     </ul>                    
                 </div>
 
-
                 <div class="modal-footer">
                     <div class="em_darkMode_menu">
                         <label class="text" for="switchDark">
@@ -471,7 +470,7 @@
             </div>
         </div>
     </div>
-    <div class="modal sidebarMenu -left -guest fade" id="mdllSidebar-guest" tabindex="-1"
+<!--     <div class="modal sidebarMenu -left -guest fade" id="mdllSidebar-guest" tabindex="-1"
         aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-scrollable">
             <div class="modal-content">
@@ -586,7 +585,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <div class="d-flex justify-content-center">
         <div class="toast status-connection" role="alert" aria-live="assertive" aria-atomic="true"></div>
     </div>
