--- a/src/app/components/pages/login/login.component.html
+++ b/src/app/components/pages/login/login.component.html
@@ -51,7 +51,7 @@
                     <div class="display-actions">
                            <button type="submit"  class="btn btn-sm-arrow bg-primary" style="color:white;">Entrar
                                 <div class="ico">
-                                <i class="ri-arrow-drop-right-line"></i>
+                                <i class="ri-login-box-line"></i>
                                 </div>
                             </button>
 
