--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -6,13 +6,13 @@
             </div>
         </a>
         <div class="un-block-right">
-            <div class="un-notification">
+           <!--  <div class="un-notification">
                 <a href="page-activity.html" aria-label="activity">
                     <i class="ri-notification-line"></i>
                 </a>
                 <span class="bull-activity"></span>
             </div>
-            <div class="un-user-profile">
+ -->            <div class="un-user-profile">
                 <a href="page-my-profile.html" aria-label="profile">
                     <picture>
                         <source srcset="assets/assetsryal/images/avatar/11.webp" type="image/webp">
